--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "require": {
         "php": ">=5.4",
         "symfony/console": "~2",
+        "symfony/filesystem": "~2",
+        "symfony/process": "~2",
         "matthiasmullie/minify": "dev-master"
     },
     "require-dev": {
