--- a/composer.json
+++ b/composer.json
@@ -8,21 +8,13 @@
         "symfony/console": "~2",
         "symfony/filesystem": "~2",
         "symfony/process": "~2",
+        "Sumfony/finder": "~2",
         "matthiasmullie/minify": "dev-master"
-    },
-    "require-dev": {
-        "phpspec/phpspec": "2.1.*@dev",
-        "fabpot/php-cs-fixer": "dev-master"
     },
     "autoload": {
         "psr-4": {
             "Awakenweb\\Beverage\\": "src/"
         }
-    },
-    "scripts": {
-        "post-install-cmd": [
-            "vendor/bin/beverage init"
-        ]
     },
     "config": {
         "preferred-install": "dist"
