--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
         "php": ">=5.4",
         "symfony/console": "~2",
         "symfony/filesystem": "~2",
-        "symfony/process": "~2",
         "symfony/finder": "~2",
         "matthiasmullie/minify": "dev-master"
+    },
+    "require-dev": {
+        "fabpot/php-cs-fixer": "dev-master"
     },
     "autoload": {
         "psr-4": {
